# diary

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: diary.desktop
include/: db.hpp  editor.hpp  menu.hpp  utils.hpp
source/: db.cpp  editor.cpp  main.cpp  menu.cpp  utils.cpp
